my-portfolio/src/pages/sigparser/sigparser.css
/* Hero Section */
.project-details-heading-container {
    display: flex;  
    justify-content: center; 
    align-items: center; 
    height: auto;
    width: 100%; 
    padding: 10vw 0 10vw 0;
}

/* Home Section */
.video-container .rounded-left {
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
}

/* Vice Section */
.phase-2-details-container {
    text-align: center;
    align-items: center;
    padding-bottom: 2vw;
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.phase-2-img-container {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.phase-2-proven-concept-container {
    display: flex;
    width: 100%;
    align-items: center;
    flex-direction: column;
    justify-content: space-between;
    gap: 5vw;
}

.phase-2-proven-concept-container * {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.curved-arrow-top-left {
    width: 50%;
    height: 50%;
    transform: scaleY(-1);
}

.straight-arrow-down {
    transform: rotate(180deg);
    width: 65%;
    height: 65%;
}

.phase-2-proof-img {
    border-radius: 15px;
}

.sigparser-phase-2-video {
    border-radius: 15px;
    margin-bottom: 12px;
}

/* Query Generator Section */
.video-container .rounded-right {
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
}

/* General Phase Sections Styles */
.sigparser-phase-container {
    display: flex;
    flex-direction: column;
    padding-bottom: 10vw;
}

.phases-details-container {
    height: 100%;
    padding: 1vw 6vw 1vw 3vw;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.phase-1-and-3-description {
    display: flex;
    flex-direction: column;
    gap: 20px;
}
  
.video-container video {
    width: 100%;
    height: auto; 
    object-fit: cover;
}

.sigparser-tech-graphics {
    display: flex;
    justify-content: center;
    gap: 20px;
    width: 100%;
}

.sigparser-tech-graphics * {
    width: 30%;
    height: auto;
}

.sigparser-tech-graphics svg,
.sigparser-tech-graphics img {
  transition: transform 0.3s ease, filter 0.3s ease;
}

.sigparser-tech-graphics svg:hover,
.sigparser-tech-graphics img:hover {
  transform: scale(1.1);
  filter: brightness(1.2);
}

/* Overview Section */
.sigparser-overview-container {
    display: flex;  
    flex-direction: column;
    justify-content: center; 
    align-items: center; 
    gap: 20px;
    height: auto; 
    width: 100%; 
    margin-bottom: 5vw;
    padding: 5vw 0 5vw 0;
    position: relative;
    isolation: isolate;
}
  
.sigparser-overview-container::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100%;
    background: radial-gradient(circle, rgba(222,220,255,1) 0%, rgba(67,59,255,1) 100%);
    transform: skewY(-2deg);
    z-index: -1;
}

.overview-title {
    width: 100%;
}

.underline {
    text-decoration: underline;
}

.sigparser-overview-details {
    display: flex;
    flex-direction: column;
    gap: 30px;
    align-items: flex-start; 
    width: 100%;
}

/* Progress Bar Styles */
.progress-bar-container {
    position: fixed;
    top: 0;
    right: 20px;
    width: 10px;
    height: 100%;
    z-index: 1000;
    border-radius: 5px;
}
  
.progress-bar {
    width: 100%;
    background: rgba(222, 220, 255, 0.7);
    border-radius: 5px;
    transition: height 0.25s ease-out;
}
  

